updated footer address

--- a/src/app/footer/footer/footer.component.html
+++ b/src/app/footer/footer/footer.component.html
@@ -6,7 +6,7 @@
                     get in touch
                 </div>
                 <div class="font-sans text-sm mt-2">
-                    <p class="mt-1">Rue 34, Avenue Hassan II Medina Rabat. Morocco</p>
+                    <p class="mt-1">288 East Hastings Street, Vancouver BC V6A 0H7</p>
                     <app-phone></app-phone>
                     <app-email></app-email>
                     <app-social></app-social>
