--- a/src/app/trainer/trainer-benefits/trainer-benefits.component.html
+++ b/src/app/trainer/trainer-benefits/trainer-benefits.component.html
@@ -1,10 +1,10 @@
-<div class="bg-gray-100 font-sans rounded-lg">
+<div class="bg-gray-100 font-sans">
     <div class="flex items-center justify-center">
-        <div class="bg-white p-6 mt-20 mb-10 lg-rounded w-full">
+        <div class="bg-white p-6 mt-20 mb-10 text-sm font-semibold w-full">
             <form [formGroup]="updateTrainerBenefitForm">
-                <header class="justify-start p-2 text-gray-950 font-bold font-sans">
+                <header class="justify-start p-2 text-gray-950  font-sans">
                     <h1 class="text-xl text-red-600">Trainer's Benefits
-                        <span *ngIf="!trainerBenefit.id" class="text-sm mx-2 text-gray-700 italic">
+                        <span *ngIf="!trainerBenefit.id" class=" mx-2 text-gray-700 italic">
                             (action required)</span>
                     </h1>
                     <span class="text-md flex text-gray-700">
@@ -12,7 +12,7 @@
                     </span>
                 </header>
                 <div class="border-b-2"></div>
-                <div class="invalid-form">
+                <div class="invalid-form text-gray-950">
                     <span *ngIf="updateTrainerBenefitForm.invalid && invalidForm" class="mx-2 text-red-600">
                         At least 5 Benefits and Input fields cannot be empty
                     </span>
@@ -26,14 +26,14 @@
                         <div formArrayName="benefits">
                             <div *ngFor="let benefit of getBenefits().controls; let i = index" [formGroupName]="i">
                                 <div class="w-full flex items-center space-x-2">
-                                    <span class="font-bold text-gray-600 italic">{{ i + 1 }}.</span>
+                                    <span class=" font-semibold text-gray-950 italic">{{ i + 1 }}.</span>
                                     <input formControlName="benefit" id="benefitField_{{i}}"
-                                        class="w-full text-sm px-4 py-2 m-2 rounded-md bg-gray-200 focus:outline-none border-b-2 border-gray-400 hover:border-gray-500"
+                                        class="w-full  px-4 py-2 m-2 rounded-md  font-semibold text-gray-950 focus:outline-none border-b-2 border-gray-400 hover:border-gray-500"
                                         [ngClass]="{'border-red-400': benefit.invalid && (benefit.dirty || invalidForm) }"
                                         placeholder="e.g Increased strength and flexibility guaranteed" type="text">
-                                    <button type="button" (click)="removeBenefitField(i)"
+                                    <button type="button" (click)="removeBenefitField(i)" class="text-xs focus:text-sm"
                                         *ngIf="getBenefits().length > 1">
-                                        <i-feather name="x" class="text-sm font-bold text-red-600"></i-feather>
+                                        <i-feather name="x" class="text-red-600 "></i-feather>
                                     </button>
                                 </div>
                                 <span *ngIf="benefit.invalid && (benefit.dirty || invalidForm)"
@@ -42,7 +42,7 @@
                                 </span>
                             </div>
                         </div>
-                        <button type="button" class="bg-gray-200 text-sm text-red-600 p-1 px-2 rounded-md mt-2"
+                        <button type="button" class="bg-gray-200 text-xs text-red-600 p-1 px-2 rounded-md mt-2"
                             (click)="addBenefitField()">
                             Add More Benefits
                         </button>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="flex items-center justify-center col-span-2">
                         <button id="addBenefit"
-                            class="bg-red-600 rounded-md mx-auto m-2 py-1 px-2 font-bold font-sans mx-4 text-white text-sm lg:text-md flex items-center justify-center"
+                            class="bg-red-600 rounded-md mx-auto m-2 py-1 px-2  font-sans mx-4 text-white  lg:text-md flex items-center justify-center"
                             type="submit" (click)="updateTrainerBenefit()">
                             Save
                         </button>
