fixed responsiveness on sm and md screen sizes

--- a/src/app/landing/hero-section/hero-section.component.html
+++ b/src/app/landing/hero-section/hero-section.component.html
@@ -1,5 +1,5 @@
 <section
-    class="relative h-screen bg-gradient-to-br from-black via-gray-900 to-red-900 flex items-center justify-center font-sans text-white overflow-hidden">
+    class="relative min-h-screen pt-24 lg:pt-12 bg-gradient-to-br from-black via-gray-900 to-red-900 flex items-center justify-center font-sans text-white overflow-hidden">
 
     <!-- 🔥 Cinematic Fire Background -->
     <div class="absolute inset-0 z-0">
