--- a/src/app/navbar/navigation-bar/navigation-bar.component.html
+++ b/src/app/navbar/navigation-bar/navigation-bar.component.html
@@ -1,61 +1,61 @@
 <nav class="fixed top-0 left-0 w-full z-50 bg-black backdrop-blur-md shadow-md">
 
-      <!-- Logo centered vertically and horizontally -->
+    <!-- Logo centered vertically and horizontally -->
     <div class="fixed top-0 left-0 w-[150px] -mt-6">
-      <a [routerLink]="['/home']" class="flex items-center ">
-        <img src="../../../assets/berliz-bg-less-1.png" alt="Berliz Logo" class="rounded-md" />
-      </a>
+        <a [routerLink]="['/home']" class="flex items-center ">
+            <img src="../../../assets/berliz-bg-less-1.png" alt="Berliz Logo" class="rounded-md" />
+        </a>
     </div>
-  <!-- Navbar container -->
-  <div class="flex flex-col lg:flex-row items-center justify-center py-2 px-4 lg:px-10 mt-8 space-y-4 lg:space-y-0">
-    
-  
+    <!-- Navbar container -->
+    <div class="flex flex-col lg:flex-row items-center justify-center py-2 px-4 lg:px-10 mt-8 space-y-4 lg:space-y-0">
 
-    <!-- Mobile Menu Toggle (visible only on small screens) -->
-    <div class="lg:hidden">
-      <button (click)="navMenu(menuStatus ? 'x' : 'align-justify')"
-        class="p-2 border border-gray-400 rounded-lg text-white hover:bg-red-600 transition-all duration-300">
-        <i-feather [name]="menuStatus ? 'x' : 'align-justify'" class="text-2xl"></i-feather>
-      </button>
-    </div>
+        <!-- Mobile Menu Toggle (visible only on small screens) -->
+        <div class="lg:hidden ml-auto -mt-4 font-bold">
+            <button (click)="navMenu(menuStatus ? 'x' : 'align-justify')"
+                class="p-2 border border-gray-400 rounded-lg text-white hover:bg-red-600 transition-all duration-300">
+                <i-feather [name]="menuStatus ? 'x' : 'align-justify'" class="text-2xl"></i-feather>
+            </button>
+        </div>
 
-    <!-- Navigation Links -->
-    <ul
-      class="flex flex-col lg:flex-row items-center justify-center lg:space-x-6 space-y-4 lg:space-y-0 text-white text-sm font-semibold transition-all duration-500 ease-in-out"
-      [ngClass]="{
-        'opacity-100 translate-y-0 visible': menuStatus,
-        'opacity-0 -translate-y-5 invisible lg:opacity-100 lg:translate-y-0 lg:visible': !menuStatus
-      }">
+        <!-- Navigation Links -->
+        <ul class="lg:static absolute top-full left-0 w-full flex flex-col lg:flex-row bg-black lg:bg-transparent 
+         lg:items-center lg:justify-center lg:space-x-6 py-4 lg:py-0
+         text-white text-sm font-semibold px-4 m-top
+         transition-all duration-300 ease-in-out z-40" [ngClass]="{
+    'opacity-100 translate-y-0 visible relative': menuStatus,
+    'opacity-0 -translate-y-5 invisible lg:opacity-100 lg:translate-y-0 lg:visible': !menuStatus
+  }">
 
-      <li *ngFor="let link of navLinks" class="group">
-        <a [routerLink]="[link.path]"
-          class="px-4 py-2 block rounded-md transition duration-300 group-hover:bg-red-600 group-hover:text-white"
-          [ngClass]="{
+
+            <li *ngFor="let link of navLinks" class="group py-1 lg:py-0">
+                <a [routerLink]="[link.path]"
+                    class=" px-4 py-2 inline-block rounded-md transition duration-300 group-hover:bg-red-600 group-hover:text-white"
+                    [ngClass]="{
             'bg-red-600 text-white': isActive(link.path),
             'text-white hover:text-red-400': !isActive(link.path)
           }">
-          {{ link.label }}
-        </a>
-      </li>
+                    {{ link.label }}
+                </a>
+            </li>
 
-      <li *ngIf="!getUser()">
-        <a [routerLink]="['/sign-up']"
-          class="bg-gray-200 text-red-600 px-4 py-2 rounded-md hover:bg-gray-300 transition duration-300 whitespace-nowrap block">
-          Sign Up
-        </a>
-      </li>
-      <li *ngIf="!getUser()">
-        <a [routerLink]="['/login']"
-          class="bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700 transition duration-300 whitespace-nowrap block">
-          Login
-        </a>
-      </li>
-      <li *ngIf="getUser()">
-        <a [routerLink]="['/dashboard']"
-          class="bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700 transition duration-300 whitespace-nowrap block">
-          Dashboard
-        </a>
-      </li>
-    </ul>
-  </div>
+            <li *ngIf="!getUser()">
+                <a [routerLink]="['/sign-up']"
+                    class="bg-white text-red-600 px-4 py-2 rounded-md hover:bg-red-700 hover:text-white transition duration-300 whitespace-nowrap inline-block">
+                    Sign Up
+                </a>
+            </li>
+            <li *ngIf="!getUser()">
+                <a [routerLink]="['/login']"
+                    class="bg-white text-white px-4 py-2 rounded-md hover:bg-red-700 hover:text-white transition duration-300 whitespace-nowrap inline-block">
+                    Login
+                </a>
+            </li>
+            <li *ngIf="getUser()">
+                <a [routerLink]="['/dashboard']"
+                    class="bg-white text-red-600 px-4 py-2 rounded-md hover:bg-red-700 hover:text-white transition duration-300 whitespace-nowrap inline-block">
+                    Dashboard
+                </a>
+            </li>
+        </ul>
+    </div>
 </nav>
